tests/invalid/set_attribute_on_non_class/main.py
def run_case() -> None:
    x: int = 5

    x.foo = 1

if __name__ == "__main__":
    run_case()
